package project.app.interfaces;

public interface UserDataReceiver {
    void initUserData(String name, String position);
}
