@startuml
scale max 900 width
left to right direction
skinparam linetype ortho

package "project.app" {
    ' ========== GŁÓWNA APLIKACJA ==========
    class Main {}
    Main -|> javafx.application.Application

    ' ========== INTERFEJSY ==========
    package interfaces {
        interface UserDataReceiver
    }

    ' ========== KONTROLERY ==========
    package controllers {
        class OrdersController
        class OtherController
    }

    ' ========== DAO ==========
    package dao {
        class OrderDAO
        class OtherDAO
    }

    ' ========== MODEL ==========
    package model {
        class Order
        class Customer
        class VehicleDisplay
        class OtherModel
    }

    ' ========== UTILS ==========
    package utils {
        class AlertUtils
        class DatabaseConnector
        class OtherUtils
        class PageManagerUtils
    }

    ' ========== RELACJE ==========
    Main --> controllers.OrdersController
    Main --> utils.AlertUtils
    Main --> utils.PageManagerUtils

    controllers.OrdersController --> dao.OrderDAO
    controllers.OrdersController --> model.Order
    controllers.OrdersController --> utils.AlertUtils
    controllers.OrdersController ..|> interfaces.UserDataReceiver

    controllers.OtherController --> dao.OtherDAO
    controllers.OtherController --> model.OtherModel
    controllers.OtherController --> utils.OtherUtils
    controllers.OtherController ..|> interfaces.UserDataReceiver

    dao.OrderDAO --> model.Order
    dao.OrderDAO --> utils.DatabaseConnector

    model.Order --> model.Customer
    model.Order --> model.VehicleDisplay

    utils.PageManagerUtils ..> interfaces.UserDataReceiver

    note right of dao.OtherDAO
      Reprezentuje inne DAO w aplikacji
    end note

    note right of model.OtherModel
      Reprezentuje inne modele w aplikacji
    end note

    note right of utils.OtherUtils
      Reprezentuje inne klasy pomocnicze
    end note

    note left of controllers.OtherController
      Reprezentuje inne kontrolery
    end note
}

@enduml
